@@ -14,7 +14,7 @@ class CSSViewlet(ViewletBase):
 
     def render(self):
         self.nav_root = self.context.restrictedTraverse(
-            getNavigationRoot(self.context))
+            getNavigationRoot(self.context), None)
         if ISubsite.providedBy(self.nav_root):
             return self.template()
         else:
