@@ -4,7 +4,8 @@ Changelog
 2.0.0 (unreleased)
 ------------------
 
-- Prevent traversing to a not accessible navigation root.
+- Prevent traversing to a not accessible navigation root in banner and css
+  viewlet.
   [mathias.leimgruber]
 
 - Make current language and list of possible languages accessable thru browserview.
